# texteo

./: .gitignore  README.md  render.yaml
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a871865f78b_adding_type_in_the_message_class.py  309500ef8f58_ajouter_du_cascade_entre_les_messages_.py  77afd3d827fb_adding_reation_to_message_class.py  8ce32f9df45d_updating_last_seen.py  acb955b1ee43_jointure.py  bfda180a4948_removing_contact.py  def6b144728c_first_commit.py  eb5f2606e1dd_adding_reation_to_message_class.py  f96d077c188d_ajoute_last_message_at.py
backend/api/database/: db.py  models.py  schemas.py
backend/api/routes/: auth.py  contacts.py  conversation.py  message.py  redis.py
backend/api/utils/: deps.py  get_avatar_url.py  helpers.py  jwt.py
backend/api/websocket/: chat.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: MainContent.tsx  layout.tsx  page.tsx
frontend/src/app/a-propos/: page.tsx
frontend/src/app/fonctionalite/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatHeader.tsx  ChatMessage.tsx  ChatWindow.tsx  ConversationList.tsx  ProfieCard.tsx  SideBar.tsx
frontend/src/components/chat/: ChatHeader.tsx  (+4 more)
frontend/src/redux/: Provider.tsx  conversationSlice.ts  store.ts  uiSlice.ts  userSlice.ts
frontend/src/service/: api.ts  auth.ts
frontend/src/ui/: Footer.tsx  Header.tsx
frontend/src/utils/: constant.ts  helpers.ts  types.ts
frontend/utils/: types.ts
(+5 files in other folders)
